--- a/.github/workflows/yaml_linter.yaml
+++ b/.github/workflows/yaml_linter.yaml
@@ -1,8 +1,8 @@
 ---
-name: Yaml Lint
-on: [push]  # yamllint disable-line rule:truthy
+name: Yaml Linting
+on: [push] # yamllint disable-line rule:truthy
 jobs:
-  lintAllTheThings:
+  YAML_Linting:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
