--- a/.github/workflows/yaml_linter.yaml
+++ b/.github/workflows/yaml_linter.yaml
@@ -1,6 +1,12 @@
 ---
 name: Yaml Linting
-on: [push] # yamllint disable-line rule:truthy
+on:
+  push:
+    branches:
+    - "*"
+  pull_request:
+    branches:
+    - "*"
 jobs:
   YAML_Linting:
     runs-on: ubuntu-latest
