Expand fuck filter with new layout (#10)

--- a/Subreddit specific/UkrainianConflict/Insult-filter_fuck.yml
+++ b/Subreddit specific/UkrainianConflict/Insult-filter_fuck.yml
@@ -1,9 +1,20 @@
 ---
 # 'fuck' insult detection - reporting possible insults containing "fuck" and other variations
-# (BC removed "yourself" and "yourselves" from Regex temporarily)
+# BC - removed "yourself" and "yourselves" from Regex temporarily
 type: any
 body (regex): ["you('re a)? fuck(ing|tard|er|ed|)", "fuck\\s*(you|heads?|wads?|offs?|heads?|faces?)"]
-~title+body: ["fuck Mike Pompeo", "fuck putin", "fuck trump", "fuck you russia", "Russia to fuck off", "fuck off to Russia", "Fuck you elon", "fuck off russia"]
+~title+body: [
+    # Countries
+    "fuck you russia", "Russia to fuck off", "fuck off to Russia", "fuck off russia", "Russians fuck off",
+    # People - Trump
+    "fuck trump",
+    # People - Putin
+    "fuck putin",
+    # People - Elon Musk
+    "Fuck you elon", "Fuck Elon",
+    # People - other politicians
+    "fuck Mike Pompeo"
+]
 action: report
 action_reason: "Possible insult using 'fuck'. Matched on: {{match}}"
 ignore_blockquotes: true
