--- a/Subreddit specific/UkrainianConflict/Insult-filter_fuck.yml
+++ b/Subreddit specific/UkrainianConflict/Insult-filter_fuck.yml
@@ -1,11 +1,11 @@
 ---
 # 'fuck' insult detection - reporting possible insults containing "fuck" and other variations
-# BC - removed "yourself" and "yourselves" from Regex temporarily
+# (BC removed "yourself" and "yourselves" from Regex temporarily)
 type: any
 body (regex): ["you('re a)? fuck(ing|tard|er|ed|)", "fuck\\s*(you|heads?|wads?|offs?|heads?|faces?)"]
 ~title+body: [
     # Countries
-    "fuck you russia", "Russia to fuck off", "fuck off to Russia", "fuck off russia", "Russians fuck off",
+    "fuck you russia", "Russia to fuck off", "fuck off to Russia", "fuck off russia", "Russians fuck off", "Fuck you Turkey", "Yanks to fuck off", 
     # People - Trump
     "fuck trump",
     # People - Putin
@@ -13,8 +13,10 @@ body (regex): ["you('re a)? fuck(ing|tard|er|ed|)", "fuck\\s*(you|heads?|wads?|o
     # People - Elon Musk
     "Fuck you elon", "Fuck Elon",
     # People - other politicians
-    "fuck Mike Pompeo"
-]
+    "fuck Mike Pompeo",
+    # Misc
+    "that poor fucker"
+    ]
 action: report
 action_reason: "Possible insult using 'fuck'. Matched on: {{match}}"
 ignore_blockquotes: true
