--- a/Subreddit_specific/UkrainianConflict/Insult-filter_fuck.yml
+++ b/Subreddit_specific/UkrainianConflict/Insult-filter_fuck.yml
@@ -2,10 +2,10 @@
 # 'fuck' insult detection - reporting possible insults containing "fuck" and other variations
 # (BC removed "yourself" and "yourselves" from Regex temporarily)
 type: any
-body (regex): ["you('re a)? fuck(ing|tard|er|ed|)", "fuck\\s*(you|heads?|wads?|offs?|heads?|faces?)"]
+body (regex): ["you('re a)? fuck(ing|tard|er|ed|)", "fuck\\s*(you|heads?|wads?|offs?|heads?|faces?)", fucker]
 ~title+body: [
     # Countries
-    "fuck you russia", "Russia to fuck off", "fuck off to Russia", "fuck off russia", "Russians fuck off", "Fuck you Turkey", "Yanks to fuck off",
+    "fuck you russia", "Russia to fuck off", "fuck off to Russia", "fuck off russia", "Russians fuck off", "Fuck you Turkey", "Yanks to fuck off", "Ru just needs to fuck off", "Hungary can fuck off",
     # People - Trump
     "fuck trump",
     # People - Putin
@@ -13,7 +13,7 @@ body (regex): ["you('re a)? fuck(ing|tard|er|ed|)", "fuck\\s*(you|heads?|wads?|o
     # People - Elon Musk
     "Fuck you elon", "Fuck Elon",
     # People - other politicians
-    "fuck Mike Pompeo",
+    "fuck Mike Pompeo", "Tucker is a Fucker", "Fucker Carlson", "Macron is a fucking",
     # Misc
     "that poor fucker"
 ]
