--- a/Subreddit_specific/UkrainianConflict/Insult-filter_fuck.yml
+++ b/Subreddit_specific/UkrainianConflict/Insult-filter_fuck.yml
@@ -5,7 +5,7 @@ type: any
 body (regex): ["you('re a)? fuck(ing|tard|er|ed|)", "fuck\\s*(you|heads?|wads?|offs?|heads?|faces?)", fucker]
 ~title+body: [
     # Countries
-    "fuck you russia", "Russia to fuck off", "fuck off to Russia", "fuck off russia", "Russians fuck off", "Fuck you Turkey", "Yanks to fuck off", "Ru just needs to fuck off", "Hungary can fuck off",
+    "fuck you russia", "Russia to fuck off", "fuck off to Russia", "fuck off russia", "Russians fuck off", "Fuck you Turkey", "Yanks to fuck off", "Ru just needs to fuck off", "Hungary can fuck off", "Russian fucker",
     # People - Trump
     "fuck trump",
     # People - Putin
