--- a/Subreddit_specific/UkrainianConflict/Insult-filter_fuck.yml
+++ b/Subreddit_specific/UkrainianConflict/Insult-filter_fuck.yml
@@ -5,15 +5,15 @@ type: any
 body (regex): ["you('re a)? fuck(ing|tard|er|ed|)", "fuck\\s*(you|heads?|wads?|offs?|heads?|faces?)", fucker]
 ~title+body: [
     # Countries
-    "fuck you russia", "Russia to fuck off", "fuck off to Russia", "fuck off russia", "Russians fuck off", "Fuck you Turkey", "Yanks to fuck off", "Ru just needs to fuck off", "Hungary can fuck off", "Russian fucker",
+    "fuck you russia", "Russia to fuck off", "fuck off to Russia", "fuck off russia", "Russians fuck off", "Fuck you Turkey", "Yanks to fuck off", "Ru just needs to fuck off", "Hungary can fuck off", "Russian fucker", "Fuck off China", "Fuck you China",
     # People - Trump
     "fuck trump",
     # People - Putin
-    "fuck putin",
+    "fuck putin", "Fuck you Putin",
     # People - Elon Musk
-    "Fuck you elon", "Fuck Elon",
+    "Fuck you elon", "Fuck Elon", 
     # People - other politicians
-    "fuck Mike Pompeo", "Tucker is a Fucker", "Fucker Carlson", "Macron is a fucking",
+    "fuck Mike Pompeo", "Tucker is a Fucker", "Fucker Carlson", "Macron is a fucking", "Fuck off Pooh",
     # Misc
     "that poor fucker"
 ]
