--- a/Anti-spam/No boorus.yaml
+++ b/Anti-spam/No boorus.yaml
@@ -1,5 +1,5 @@
 ---
-# Warning when booru links are posted
+# Warning when booru links are posted (updated 2023-10-18)
 type: comment
 body (includes): ['gelbooru.com', 'danbooru.donmai.us', 'drawanime.art', 'i-love-cool.com', 'knowyourmeme.com', 'zerochan.net', 'pinterest.com', 'vk.com']
 comment: |
