--- a/General/OC_tagger.yaml
+++ b/General/OC_tagger.yaml
@@ -1,5 +1,7 @@
 ---
 # OC tagger - tag things as OC if it's mentioned in the title
+# Last updated: 2023-12-13
+# Src: https://github.com/KanchiMoe/Reddit-AutoModerator-rules/blob/master/General/OC_tagger.yaml
 type: submission
 title: ["made by me", "I drew", "drawn by me", "[OC]"]
 set_original_content: true
