--- a/Subreddit_specific/UkrainianConflict/Nitter_link.yml
+++ b/Subreddit_specific/UkrainianConflict/Nitter_link.yml
@@ -1,11 +1,13 @@
 ---
-# Nitter
+# Nitter mirros - post a comment with links to Nitter mirrors.
+# Last updated: 2024-01-15
+# Src: https://github.com/KanchiMoe/Reddit-AutoModerator-rules/blob/master/Subreddit_specific/UkrainianConflict/Nitter_link.yml
 type: submission
 url+body (regex): 'twitter\.com(?# Making sure not to match it in the text part of the hyperlink >> )(?!\S+\] ?\()(?# Matching the rest of the url >> )([^\s\)?]+)'
 comment: |
     **Alternative Nitter links:** 「 [.NET](https://nitter.net{{match-2}}) | [.NL](https://nitter.nl{{match-2}}) | [.CZ](https://nitter.cz{{match-2}}) 」
 
-    ^NL ^hasn't ^been ^working ^for ^>1 ^months ^as ^of ^Sept ^2023.
+    ^NL ^hasn't ^been ^working ^since ^Sept ^2023. ^It ^may ^only ^work ^if ^you ^are ^in ^NL.
 
     _If there are any problems regarding Nitter, [please send us a modmail](https://www.reddit.com/message/compose?to={{subreddit}}&subject=Nitter%20issue)._
 
