--- a/General/OC_tagger.yaml
+++ b/General/OC_tagger.yaml
@@ -1,9 +1,9 @@
 ---
 # OC tagger - tag things as OC if it's mentioned in the title
-# Last updated: 2024-01-13
+# Last updated: 2024-01-22
 # Src: https://github.com/KanchiMoe/Reddit-AutoModerator-rules/blob/master/General/OC_tagger.yaml
 type: submission
-title: ["made by me", "I drew", "drawn by me", "[OC]", "art by me"]
+title: ["made by me", "I drew", "drawn by me", "[OC]", "art by me", "my art"]
 set_original_content: true
 action_reason: "Detected {{match}} in the title"
 message_subject: "We marked your {{kind}} as OC (original content)"
