--- a/Subreddit_specific/MissingPersons/AntiDox_email.yaml
+++ b/Subreddit_specific/MissingPersons/AntiDox_email.yaml
@@ -1,7 +1,7 @@
 ---
 # Anti-dox (email)
 title+body (regex): ['(?!(abuse|help|info|no-?reply|phishing|service|spoof|support)\@)[\w!#$%&\x27*+\-./=?\^\x60{|}~]+\@([\w-]{1,64}\.)+([a-z]{2,16}|xn--[a-z0-9-]{1,60})']
-~title+body: ["@south-wales.police.uk", "missing@police.portlandoregon.gov"]
+~title+body: ["@south-wales.police.uk", "missing@police.portlandoregon.gov", "wayne.manthe@cityofwinder.com"]
 ~author: ["editorgrrl", "DarkUrGe19"]
 action: remove
 action_reason: "Antidox - email address detected [{{match}}]"
