--- a/Subreddit_specific/UkrainianConflict/Nitter_link.yml
+++ b/Subreddit_specific/UkrainianConflict/Nitter_link.yml
@@ -5,9 +5,11 @@
 type: submission
 url+body (regex): 'twitter\.com(?# Making sure not to match it in the text part of the hyperlink >> )(?!\S+\] ?\()(?# Matching the rest of the url >> )([^\s\)?]+)'
 comment: |
-    **Alternative Nitter links:** 「 [.NET](https://nitter.net{{match-2}}) | [.NL](https://nitter.nl{{match-2}}) | [.CZ](https://nitter.cz{{match-2}}) 」
+    **Alternative Nitter links:**「[nitter.fdn.fr](https://nitter.fdn.fr{{match-2}}) | [nitter.unixfox.eu](https://nitter.unixfox.eu/{{match-2}}) | [nitter.moomoo.me](https://nitter.moomoo.me{{match-2}})」
 
-    ^NL ^hasn't ^been ^working ^since ^Sept ^2023. ^It ^may ^only ^work ^if ^you ^are ^in ^NL.
+    *****
+
+    Nitter may stop working in the imminent future. Nitter.cz stopped working on 15/02/2024. [See this arstechnica article](https://arstechnica.com/tech-policy/2024/02/twitter-front-end-nitter-dies-as-musk-wins-war-against-third-party-services/).
 
     _If there are any problems regarding Nitter, [please send us a modmail](https://www.reddit.com/message/compose?to={{subreddit}}&subject=Nitter%20issue)._
 
