Update blocked_domains_cant_approve.yaml (#52)
* Update blocked_domains_cant_approve.yaml

* fix yaml linting

--- a/General/blocked_domains_cant_approve.yaml
+++ b/General/blocked_domains_cant_approve.yaml
@@ -1,10 +1,10 @@
 ---
 # Comment when a link is blocked by reddit and mods can't approve it
 # Last updated: 2024-04-22
-# src:
+# src: https://github.com/KanchiMoe/Reddit-AutoModerator-rules/blob/master/General/blocked_domains_cant_approve.yaml
 type: any
 body+url (includes, regex):
-    - "https?://(?:www\\.)?(sevastopol-news\\.com|bitchute\\.com|southfront\\.org|iswnews\\.com|rt\\.com|tass\\.com)"
+    - "https?://(?:www\\.)?(sevastopol-news\\.com|bitchute\\.com|southfront\\.org|iswnews\\.com|rt\\.com|tass\\.com|(?:.*\\.)?rt\\.com|.+\\.ru)"
 action: remove
 action_reason: "{{kind}} includes a link to a domain blocked by Reddit. Match: [{{match-2}}]"
 comment: |
@@ -12,8 +12,9 @@ comment: |
 
   **We can not restore your {{kind}}**. This restriction has been placed by Reddit itself. There is nothing we (as moderators) can do about bypassing or restoring it. Please **do not** message us asking us to restore it, because we can't.
 
-  We can't restore your {{kind}}, even if you remove it. You will need to resubmit it entirely with the link to `{{match-2}}` removed.
+  We can't restore your {{kind}} even if you remove the link. You will need to resubmit it entirely with the links removed.
 
   *****
 moderators_exempt: false
+# remove ria as doesn't appear to be filtered - (?:.*\\.)?ria\\.com
 ---
