--- a/General/blocked_domains_cant_approve.yaml
+++ b/General/blocked_domains_cant_approve.yaml
@@ -4,7 +4,7 @@
 # src: https://github.com/KanchiMoe/Reddit-AutoModerator-rules/blob/master/General/blocked_domains_cant_approve.yaml
 type: any
 body+url (includes, regex):
-    - "https?://(?:www\\.)?(sevastopol-news\\.com|bitchute\\.com|southfront\\.org|iswnews\\.com|rt\\.com|tass\\.com|(?:.*\\.)?rt\\.com|.+\\.ru)"
+    - "https?://(?:www\\.)?(sevastopol-news\\.com|bitchute\\.com|southfront\\.org|iswnews\\.com|rt\\.com|tass\\.com|theins\\.ru|(?:.*\\.)?rt\\.com|.+\\.ru)"
 action: remove
 action_reason: "{{kind}} includes a link to a domain blocked by Reddit. Match: [{{match-2}}]"
 comment: |
@@ -17,4 +17,8 @@ comment: |
   *****
 moderators_exempt: false
 # remove ria as doesn't appear to be filtered - (?:.*\\.)?ria\\.com
+# remove .ru, needs rework
 ---
+
+
+
