--- a/subreddit_specific/missingpersons/antidox_email.yaml
+++ b/subreddit_specific/missingpersons/antidox_email.yaml
@@ -3,7 +3,7 @@
 # src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/master/subreddit_specific/missingpersons/antidox_email.yaml
 # Last updated: 2024-11-22
 title+body (regex): ['(?!(abuse|help|info|no-?reply|phishing|service|spoof|support)\@)[\w!#$%&\x27*+\-./=?\^\x60{|}~]+\@([\w-]{1,64}\.)+([a-z]{2,16}|xn--[a-z0-9-]{1,60})']
-~title+body: ["@south-wales.police.uk", "missing@police.portlandoregon.gov", "wayne.manthe@cityofwinder.com", "@rcmp-grc.gc.ca", "@flathead.mt.gov", "@deltapolice.ca", "@townofpendleton.org", "@njsp.gov", "@puyallupwa.gov"]
+~title+body: ["@south-wales.police.uk", "missing@police.portlandoregon.gov", "wayne.manthe@cityofwinder.com", "@rcmp-grc.gc.ca", "@flathead.mt.gov", "@deltapolice.ca", "@townofpendleton.org", "@njsp.gov", "@puyallupwa.gov", "info@antipredatorproject.org"]
 ~author: ["Example"]
 action: remove
 action_reason: "Antidox - email address detected [{{match}}]"
