--- a/general/blocked_domains_cant_approve.yaml
+++ b/general/blocked_domains_cant_approve.yaml
@@ -4,7 +4,7 @@
 # src: https://github.com/KanchiMoe/Reddit-AutoModerator-rules/blob/master/General/blocked_domains_cant_approve.yaml
 type: any
 body+url (includes, regex):
-    - "https?://(?:www\\.)?(sevastopol-news\\.com|bitchute\\.com|southfront\\.org|iswnews\\.com|rt\\.com|tass\\.com|(?:.*\\.)?rt\\.com|pravda-en\\.com|tampafp\\.com)"
+    - "https?://(?:www\\.)?(sevastopol-news\\.com|bitchute\\.com|southfront\\.org|iswnews\\.com|rt\\.com|tass\\.com|(?:.*\\.)?rt\\.com|pravda-en\\.com|tampafp\\.com|cointelegraph\\.com)"
 action: remove
 action_reason: "{{kind}} includes a link to a domain blocked by Reddit. Match: [{{match-2}}]"
 comment: |
