--- a/general/anti-ai.yaml
+++ b/general/anti-ai.yaml
@@ -1,9 +1,9 @@
 ---
 # Removes negative AI comments
 # src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/master/general/anti-ai.yaml
-# Last updated: 2024-09-04
+# Last updated: 2025-03-25
 type: comment
-body: ["ai artists", "Fuck AI art", "AI fingers", "AI bullshit", "shitty ai art", 'ai', 'a.i.']
+body: ["ai art", "AI fingers", "AI bullshit", 'ai', 'a.i.', "al art", "stable diffusion"]
 action: remove
 action_reason: "Anti-ai {{kind}}. Match: [{{match}}]"
 ---
