--- a/.github/workflows/yaml_linter.yaml
+++ b/.github/workflows/yaml_linter.yaml
@@ -11,8 +11,8 @@ jobs:
   YAML_Linting:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       - name: yaml-lint
         uses: ibiqlik/action-yamllint@v3
-        # with:
-        # config_file: .yamllint.yml
+        with:
+          config_file: .yamllint.yml
