--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -17,7 +17,7 @@ rules:
   empty-values: disable
   float-values: disable
   hyphens: enable
-  indentation: enable
+  indentation:
     spaces: consistent
   key-duplicates: enable
   key-ordering: disable
@@ -29,4 +29,3 @@ rules:
   trailing-spaces: enable
   truthy:
     level: warning
-
