--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -17,7 +17,8 @@ rules:
   empty-values: disable
   float-values: disable
   hyphens: enable
-  indentation: enable
+  indentation:
+    spaces: consistent
   key-duplicates: enable
   key-ordering: disable
   line-length: disable
