minor word adjustments for petition submissions

--- a/subreddit_specific/missingpersons/remove_petition_submissions.yaml
+++ b/subreddit_specific/missingpersons/remove_petition_submissions.yaml
@@ -14,9 +14,7 @@ comment: |
 
   > Petition websites do not verify if the person listed is genuinely missing, and as such, are not allowed.
 
-  > We also don't feel that /r/{{subreddit}} is an appropriate community for petition submissions.
-
-  *****
+  > Furthermore, We don't feel that /r/{{subreddit}} is an appropriate subreddit for petition canvassing.
 
   *****
 comment_locked: true
