more petition submission minor wording adjustments

--- a/subreddit_specific/missingpersons/remove_petition_submissions.yaml
+++ b/subreddit_specific/missingpersons/remove_petition_submissions.yaml
@@ -14,7 +14,7 @@ comment: |
 
   > Petition websites do not verify if the person listed is genuinely missing, and as such, are not allowed.
 
-  > Furthermore, We don't feel that /r/{{subreddit}} is an appropriate subreddit for petition canvassing.
+  > Furthermore, We don't feel that /r/{{subreddit}} is not an appropriate subreddit for petition canvassing. You may want to try in a subreddit for your local area or country instead.
 
   *****
 comment_locked: true
