--- a/subreddit_specific/ukrainianconflict/insult_reporter_shit.yml
+++ b/subreddit_specific/ukrainianconflict/insult_reporter_shit.yml
@@ -17,6 +17,7 @@ title+body: ["piece of shit", "shitface"]
   # People - other politicians
   "Erdogan is a piece of shit", "Schroeder - a huge piece of shit", "George Bush is a piece of shit", "McCarthy is such a piece of shit", "Piece of shit Mike Johnson",
   # People - others
+  "piece of shit Jeffery Epstein",
   # Misc
   "piece of shit propaganda",
 ]
