--- a/subreddit_specific/ukrainianconflict/insult_reporter_scum.yml
+++ b/subreddit_specific/ukrainianconflict/insult_reporter_scum.yml
@@ -1,19 +1,21 @@
 ---
 # 'scum' insult detection - reporting possible insults containing "scum" and other variations
 # src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/refs/heads/master/subreddit_specific/ukrainianconflict/insult_reporter_scum.yml
-# Last updated: 2025-05-08
+# Last updated: 2025-07-15
 type: comment
-title+body: ["cunt"]
+title+body: ["scum"]
 ~title+body: [
   # Countries
   # People - Trump
   # People - Putin
   # People - Elon Musk
+  "Elon is a commie scum",
   # People - Trump
   # People - other politicians
-  "scum like Erdogan",
+  "scum like Erdogan", "Solovyev is pure Russian scum",
   # People - others
   # Misc
+  "scum russian reports",
 ]
 action: report
 report_reason: "Possible insult using 'scum'. Match [{{match}}]"
