--- a/subreddit_specific/ukrainianconflict/insult_reporter_cunt.yml
+++ b/subreddit_specific/ukrainianconflict/insult_reporter_cunt.yml
@@ -7,6 +7,7 @@ title+body: ["cunt"]
 ~title+body: [
   # Countries
   # People - Trump
+  "cunt trump",
   # People - Putin
   # People - Elon Musk
   "cunt like Musk", "Musk is a Cunt", "Musk you cunt", "Elon is such a cunt",
