--- a/subreddit_specific/netflix/remove_selling_accounts.yaml
+++ b/subreddit_specific/netflix/remove_selling_accounts.yaml
@@ -3,7 +3,7 @@
 # src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/refs/heads/master/subreddit_specific/netflix/remove_selling_accounts.yaml
 # Last updated: 2025-07-29
 type: comment
-body: ["sell netflix", "Netflix 4 k premium account"]
+body: ["sell netflix", "Netflix 4 k premium account", "selllling", "24 hour service", "lifetime warranty", "linkks"]
 action: remove
 modmail_subject: "[notification] Possible netflix account seller"
 modmail: |
