--- a/subreddit_specific/ukrainianconflict/insult_reporter_cunt.yml
+++ b/subreddit_specific/ukrainianconflict/insult_reporter_cunt.yml
@@ -1,12 +1,13 @@
 ---
 # 'cunt' insult detection - reporting possible insults containing "cunt" and other variations
 # src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/refs/heads/master/subreddit_specific/ukrainianconflict/insult_reporter_cunt.yml
-# Last updated: 2025-05-08
+# Last updated: 2025-07-23
 type: comment
 title+body: ["cunt"]
 ~title+body: [
   # Countries
   # People - Trump
+  "cunt trump",
   # People - Putin
   # People - Elon Musk
   "cunt like Musk", "Musk is a Cunt", "Musk you cunt", "Elon is such a cunt",
