--- a/subreddit_specific/netflix/new_ui_sticky.yaml
+++ b/subreddit_specific/netflix/new_ui_sticky.yaml
@@ -1,9 +1,9 @@
 ---
 # Adds a sticky if a post mentions the new UI
 # src: https://raw.githubusercontent.com/KanchiMoe/Reddit-AutoModerator-rules/refs/heads/master/subreddit_specific/netflix/new_ui_sticky.yaml
-# Last updated: 2025-07-30
+# Last updated: 2025-08-01
 type: submission
-title+body: ["new ui", "recent redesign", "new userface", "new design", "new interface", "apps interface"]
+title+body: ["new ui", "recent redesign", "new userface", "new design", "new interface", "apps interface", "user interface"]
 action: remove
 action_reason: "New UI {{kind}}"
 comment: |
