fix message the mods link

--- a/subreddit_specific/frieren/loweffort_anime_trendingcorner.yaml
+++ b/subreddit_specific/frieren/loweffort_anime_trendingcorner.yaml
@@ -14,7 +14,7 @@ comment: |
 
   > If you think this was a mistake, use the link below to message the moderators for a manual review.
 
-  > [**Message the subreddit moderators**](https://reddit.com/message/compose?to=/r/{{subreddit}}&subject=Low%20quality%20appeal%20(anime%20trending%2Fcorner\)&message=Insert%20additional%20information%20here.%0A%0A---%20Do%20not%20edit%20below%20this%20line%20---%0A%0ALink%3A%20{{permalink}}%0A)」
+  > 「[**Message the subreddit moderators**](https://reddit.com/message/compose?to=/r/{{subreddit}}&subject=Low%20quality%20appeal%20%28anime%20trending%2Fcorner%29&message=Insert%20additional%20information%20here.%0A%0A---%20Do%20not%20edit%20below%20this%20line%20---%0A%0ALink%3A%20{{permalink}}%0A)」
 
   *****
 
